# puzzle-solver

./: Cargo.toml  README.md
src/: intdiv.rs  lib.rs  linexpr.rs  puzzle.rs
src/constraint/: alldifferent.rs  equality.rs  mod.rs  unify.rs
tests/: hidato.rs  kakuro.rs  killersudoku.rs  magicsquare.rs  nonogram.rs  queens.rs  samuraisudoku.rs  sendmoremoney.rs  sudoku.rs  sujiko.rs  takuzu.rs  xkcd.rs  zebra.rs
