[package]
name = "puzzle-solver"
version = "0.4.1"
authors = ["David Wang <millimillenary@gmail.com>"]
homepage = "https://github.com/wangds/puzzle-solver.git"
repository = "https://github.com/wangds/puzzle-solver.git"
documentation = "https://docs.rs/puzzle-solver/"
description = "Solve logic puzzles by describing their constraints.  Suitable for puzzles such as Sudoku and Kakuro."
license = "MIT"
readme = "README.md"
keywords = ["constraint", "finite", "domain", "puzzle", "sudoku"]
categories = ["science"]

[dependencies]
bit-set = "0.4"
num-rational = { version = "0.1", default-features = false }
num-traits = "0.1"

[badges]
travis-ci = { repository = "wangds/puzzle-solver" }
